--- a/src/shared/components/layout/Layout.sass
+++ b/src/shared/components/layout/Layout.sass
@@ -9,6 +9,7 @@
     margin-top: $header-height
     padding: 0
     min-height: calc(100vh - #{$header-height})
+    background-color: $primary-50
     transition: margin-left $transition-slow
 
     &--sidebar-expanded
